Feature/add entities endpoints (#10)
* [Add] endpoints

* [Add] endpoints
